welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:10: error: value and is not a member of Boolean
    if (i>max and max!=max2)
              ^